# Synapse

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  README.zh-CN.md  TODO.md  tech_design.md
.github/workflows/: ci.yml  release.yml
crates/synapse-api/: Cargo.toml
crates/synapse-cli/: Cargo.toml
crates/synapse-console/: Cargo.toml
crates/synapse-core/: Cargo.toml
crates/synapse-core/benches/: mvp.rs
crates/synapse-core/src/: audit.rs  cgroups.rs  config.rs  error.rs  executor.rs  lib.rs  pool.rs  runtime.rs  runtimes.rs  scheduler.rs  service.rs  syscall_audit.rs  tenancy.rs  types.rs
crates/synapse-core/tests/: runtime_isolation.rs
docs/: README.md  api-reference.md  release-process.md
docs/CODEMAPS/: architecture.md  architecture.mmd  dependencies.md  frontend.md
docs/architecture/: overlayfs-solution-analysis.md  tech-design.md
docs/commands/: code-review.md  review-findings-2026-03-26.md
docs/plans/: go-to-market-execution-plan.md  ops-console-plan.md  pmo.md  todo.md
docs/product/: customer-validation-log-template.md  go-to-market-plan.md  icp-target-list-template.md  ideal-customer-profile.md  not-in-v1.md  poc-playbook.md  pricing-draft.md  product.md  sales-messaging.md  security-whitepaper.md  v1-scope.md
docs/quickstart/: enterprise-poc-guide.md
scripts/: ops_console_smoke.sh  p0_gate.sh  pr_review_demo_smoke.sh  release_gate_v1.sh
sdk/python/: README.md  pyproject.toml
sdk/python/examples/: execute.py  stream.py
sdk/python/src/synapse_sdk/: __init__.py  client.py
sdk/python/tests/: test_client.py
(+19 files in other folders)
