[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synapse-sdk"
version = "0.1.0"
description = "Minimal Python SDK for Synapse"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27,<0.29",
  "websockets>=12,<16",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
